--- a/WolvenKit/Views/Others/MaterialRepositoryDrawer.xaml
+++ b/WolvenKit/Views/Others/MaterialRepositoryDrawer.xaml
@@ -1,16 +1,15 @@
 <UserControl
- x:Class="WolvenKit.Views.Others.MaterialRepositoryDrawer"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:Converters1="clr-namespace:WolvenKit.Functionality.Ab4d"
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- xmlns:ab4d="clr-namespace:WolvenKit.Functionality.Ab4d;assembly=WolvenKit.App"
- d:DesignHeight="450"
- d:DesignWidth="800"
- mc:Ignorable="d"
- >
+    x:Class="WolvenKit.Views.Others.MaterialRepositoryDrawer"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Converters1="clr-namespace:WolvenKit.Functionality.Ab4d"
+    xmlns:ab4d="clr-namespace:WolvenKit.Functionality.Ab4d;assembly=WolvenKit.App"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <ab4d:XenConverter x:Key="MyColorToBrushConverterx" />
     </UserControl.Resources>
@@ -22,57 +21,68 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Border
+            Grid.Row="1"
+            Grid.RowSpan="3"
+            Grid.Column="0"
+            BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+            BorderThickness="1">
+            <ListBox
+                x:Name="Henry"
+                ItemsSource="{Binding Folders, Mode=OneWay}"
+                SelectionChanged="ListView_SelectionChanged"
+                SelectionMode="Single">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding SafeName}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Border>
         <TextBlock
-         Margin="15"
-         HorizontalAlignment="Center"
-         VerticalAlignment="Center"
-         Style="{DynamicResource TextBlockTitleBold}"
-         Text="Material Repository"
-         />
+            Grid.ColumnSpan="2"
+            Margin="15"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Style="{DynamicResource TextBlockTitleBold}"
+            Text="Material Repository" />
 
         <Border
-         Grid.Row="1"
-         BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
-         BorderThickness="1"
-         >
+            Grid.Row="1"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+            BorderThickness="1">
+
             <ListBox
-             x:Name="Henry"
-             ItemsSource="{Binding Folders, Mode=OneWay}"
-             SelectionChanged="ListView_SelectionChanged"
-             SelectionMode="Single"
-             />
+                x:Name="x"
+                ItemsSource="{Binding ImageSources, Mode=OneWay}"
+                SelectionChanged="x_SelectionChanged"
+                SelectionMode="Single">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding SafeName}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Border>
 
         <Border
-         Grid.Row="2"
-         BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
-         BorderThickness="1"
-         >
-
-            <ListBox
-             x:Name="x"
-             ItemsSource="{Binding ImageSources, Mode=OneWay}"
-             SelectionChanged="x_SelectionChanged"
-             SelectionMode="Single"
-             />
-        </Border>
-
-        <Border
-         Grid.Row="3"
-         BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
-         BorderThickness="1"
-         >
+            Grid.Row="3"
+            Grid.Column="1"
+            BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
+            BorderThickness="1">
             <ScrollViewer>
                 <hc:ImageViewer
-                 x:Name="bold"
-                 Width="auto"
-                 VerticalAlignment="Bottom"
-                 Background="{DynamicResource SecondaryRegionBrush}"
-                 />
+                    x:Name="bold"
+                    Width="auto"
+                    VerticalAlignment="Bottom"
+                    Background="{DynamicResource SecondaryRegionBrush}" />
             </ScrollViewer>
-
         </Border>
-
     </Grid>
 </UserControl>
