--- a/WolvenKit/Views/Others/MaterialRepositoryDrawer.xaml
+++ b/WolvenKit/Views/Others/MaterialRepositoryDrawer.xaml
@@ -7,6 +7,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -38,7 +40,12 @@
                 SelectionMode="Single">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding SafeName}" />
+                        <StackPanel Orientation="Horizontal">
+
+                            <Image Height="13" Source="{svgc:SvgImage /Resources/Media/Images/Icons/Files/folderdefault.svg}" />
+                            <TextBlock Text="{Binding SafeName}" />
+
+                        </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
@@ -65,7 +72,12 @@
                 SelectionMode="Single">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding SafeName}" />
+                        <StackPanel Orientation="Horizontal">
+
+                            <Image Height="13" Source="{svgc:SvgImage /Resources/Media/Images/Icons/Files/xbm.svg}" />
+                            <TextBlock Text="{Binding SafeName}" />
+
+                        </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
@@ -76,13 +88,8 @@
             Grid.Column="1"
             BorderBrush="{DynamicResource MahApps.Brushes.Accent3}"
             BorderThickness="1">
-            <ScrollViewer>
-                <hc:ImageViewer
-                    x:Name="bold"
-                    Width="auto"
-                    VerticalAlignment="Bottom"
-                    Background="{DynamicResource SecondaryRegionBrush}" />
-            </ScrollViewer>
+
+            <syncfusion:SfImageEditor x:Name="bold" />
         </Border>
     </Grid>
 </UserControl>
