Hide ribbon stuff

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -901,7 +901,8 @@
                 <syncfusion:RibbonBar
                     Name="File"
                     Width="auto"
-                    Header="File">
+                    Header="File"
+                    Visibility="Collapsed">
                     <!--  New File Button  -->
                     <syncfusion:RibbonButton
                         Command="{catel:CommandManagerBinding Application.NewFile}"
