--- a/WolvenKit.App/Controls/PathEditorView.xaml
+++ b/WolvenKit.App/Controls/PathEditorView.xaml
@@ -1,15 +1,13 @@
-<catel:UserControl
- x:Class="WolvenKit.Controls.AddPathDialogView"
+<UserControl
+ x:Class="WolvenKit.Controls.PathEditorView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:catel="http://schemas.catelproject.com"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
- xmlns:feather="clr-namespace:Feather.Controls;assembly=Feather.Controls"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- d:DesignHeight="450"
- d:DesignWidth="800"
+ d:DesignHeight="50"
+ d:DesignWidth="200"
  mc:Ignorable="d"
  >
     <UserControl.Resources>
@@ -19,12 +17,13 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid x:Name="AddPathDialogGrid">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}">
+
         <Button
          Margin="0,0,0,0"
          HorizontalAlignment="Left"
-         Command="{Binding OpenDialogCommand}"
-         >
+         Click="ButtonBase_OnClick"
+        >
             <iconPacks:PackIconCodicons
              Grid.Row="0"
              Width="15"
@@ -46,7 +45,7 @@
          VerticalAlignment="Center"
          hc:InfoElement.Necessary="True"
          Style="{StaticResource TextBoxExtendCustom}"
-         Text="{Binding Path}"
+         Text="{Binding Text}"
          ToolTipService.IsEnabled="True"
          ToolTipService.ToolTip="Add the path of an executable here."
          VerifyFunc="VerifyFile"
@@ -67,4 +66,4 @@
             </TextBlock>
         </Popup>
     </Grid>
-</catel:UserControl>
+</UserControl>
